# fahuut

./: Cargo.toml  README.md  test.quiz  test.quiz.ron
src/: main.rs
static/: index.html
templates/: after_ok_login.html  countdown.html  login.html  need_to_vote_first.html  not_found.html  plot_results.html  q_list.html  style.html  vote.html
