[package]
name = "fahuut"
version = "0.1.0"
authors = ["tungli <tun@mail.muni.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0"
features = ['derive']

[dependencies]
actix-web = "3"
actix-identity = "0.3"
actix-files = "0.5"
askama = "0.10"
env_logger = "0.8"
futures = "0.3"
ron = "0.6"
serde_json = "1.0"
